// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreditCardList Component should render correctly 1`] = `
<div
  className="abc"
>
  <Styled(Heading)
    className="cardList__heading"
    color="text.primary"
    component={null}
    dataLocator="payment-creditAndDebitCardsLabel"
    textAlign="left"
    variant="h6"
  />
  <Styled(EmptyCard)
    alt="card icon"
    icon="credit-card"
    labels={
      Object {
        "creditCardHeading": "heading",
      }
    }
    prefix="CC"
  />
  <Styled(Col)
    colSize={
      Object {
        "large": 3,
        "medium": 3,
        "small": 6,
      }
    }
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="creditCardList__ccAddCta"
      dataLocator="payment-addcreditcard"
      fill="BLUE"
    />
  </Styled(Col)>
</div>
`;

exports[`CreditCardList Component should render correctly if list is present 1`] = `
<div
  className="abc"
>
  <Styled(Heading)
    className="cardList__heading"
    color="text.primary"
    component={null}
    dataLocator="payment-creditAndDebitCardsLabel"
    textAlign="left"
    variant="h6"
  />
  <Styled(Col)
    colSize={
      Object {
        "large": 3,
        "medium": 3,
        "small": 6,
      }
    }
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="creditCardList__ccAddCta"
      dataLocator="payment-addcreditcard"
      fill="BLUE"
    />
  </Styled(Col)>
</div>
`;
